update: inform username and pass of product-service.yml

--- a/src/main/resources/configurations/product-service.yml
+++ b/src/main/resources/configurations/product-service.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/product
-    username: amu
-    password: amu
+    username: postgres
+    password: quan2108
   jpa:
     hibernate:
       ddl-auto: validate
